# EsotericReaction

./: Cargo.toml  EsoRaction  EsoRaction.mdb  EsoReaction  EsotericReaction.csproj  EsotericReaction.sln  README copy.md  README old.md  README.md  build.sh  clean.sh  crates.md  elements-bonds.csv  elements.csv  elements.md  grammar.txt  octet-rule.py  spec.ebnf
docs/: architecture.md  er.ebnf  functional-groups.md
sample/: booleans.er  factorial.er  hello-world.er  numbers.er
src/: Ast.cs  EsoReaction  EsoReaction.cs  Lexer.cs  Main.cs  Parser.cs  SyntaxTree.cs  Token.cs  eval.rs  lex.rs  main.rs  par.rs  prelude.rs  tok.rs
src/eval/: alkane.rs  atom_like.rs  atoms.rs  element.rs  functional_groups.rs  mod.rs  molecule.rs  traits.rs  value.rs
src/eval/functional_groups/: alkane.rs  amine.rs  borinic.rs  ether.rs  fg_macros.rs  sulfide.rs
src/grammar/: mod.rs
src/intern/: mod.rs
src/lex/: lex.rs  lexer.rs  mod.rs  tok.rs
src/lexer/: mod.rs  tok.rs
src/par/: ast.rs  mod.rs  par.rs  parse_error.rs  parse_tree.rs  parser.rs
src/util/: args.rs
