[package]
name = "esoteric_reaction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
itertools = "0.10.5"
line-col = "0.2.1"
logos = "0.12.1"
parse_int = "0.6.0"
petgraph = ">=0.6.3"
snailquote = "0.3.1"
stdext = "0.3.1"
